--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bunapi",
-  "scripts": {
-    "dev": "bun run --hot src/index.ts"
-  },
-  "dependencies": {
-    "hono": "^4.6.15"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+	"name": "bunapi",
+	"type": "module",
+	"scripts": {
+		"dev": "bun run --hot src/index.ts"
+	},
+	"dependencies": {
+		"hono": "^4.6.15"
+	},
+	"devDependencies": {
+		"@types/bun": "latest"
+	}
 }
