--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"@prisma/client": "^6.1.0",
 		"dotenv": "^16.4.7",
-		"hono": "^4.6.15"
+		"hono": "^4.6.15",
+		"winston": "^3.17.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
