--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"@prisma/client": "^6.1.0",
 		"dotenv": "^16.4.7",
 		"hono": "^4.6.15",
-		"winston": "^3.17.0"
+		"winston": "^3.17.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
