add: github action CI/CD

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -8,11 +8,10 @@ on:
 
 jobs:
   build:
-    name: build
+    name: unittest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install
-      - run: bun src/index.ts
-      - run: bun run build
+      - run: bun test
