--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"module": "src/index.ts",
 	"scripts": {
 		"dev": "bun run --hot src/index.ts",
-		"fc": "bunx prettier --write . && bunx eslint --fix . && bunx prettier --check . && pnpm eslint .",
+		"fc": "bunx prettier --write . && bunx eslint --fix . && bunx prettier --check . && bunx eslint .",
 		"mig": "rm -rf prisma/migrations && bunx prisma generate && bunx prisma migrate dev --name init"
 	},
 	"dependencies": {
