--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Migration
         run: bun run mig
       - name: Test
-        run: bun run test
+        run: bun test
   Create_Test_Coverage_Badges:
     runs-on: ubuntu-latest
     needs: Format_and_Check
@@ -67,7 +67,7 @@ jobs:
       - name: Migration
         run: bun run mig
       - name: Test
-        run: bun run test
+        run: bun test
       - name: Generating coverage badges
         uses: jpb06/jest-badges-action@v1.9.18
         with:
