--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -3,6 +3,8 @@ name: Unit Test 🧪
 on:
   push:
     branches: ["main", "stg"]
+    paths-ignore:
+      - "**/coverage.svg"
   pull_request:
     branches: ["main", "stg"]
 
@@ -69,6 +71,18 @@ jobs:
       - name: Test
         run: bun test
       - name: Generating coverage badges
-        uses: jpb06/jest-badges-action@v1.9.18
+        uses: ImBIOS/lcov-coverage-badge@v1
         with:
-          branches: main, stg
+          file: ./coverage/lcov.info
+          access_token: ${{ secret.GITHUB_TOKEN }}
+          style: flat
+          icon_name: googlecloud
+          icon_color: "ffffff"
+          label: "Coverage"
+          label_color: "ffffff"
+          critical: 60
+          criticalColor: "9c2c9c"
+          warning: 75
+          warningColor: "d68f0c"
+          success_color: "43ad43"
+          message_color: "ffffff"
