--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -75,7 +75,7 @@ jobs:
         uses: ImBIOS/lcov-coverage-badge@v1
         with:
           file: ./coverage/lcov.info
-          access_token: ${{ secret.GITHUB_TOKEN }}
+          access_token: ${{ secrets.GITHUB_TOKEN }}
           style: flat
           icon_name: googlecloud
           icon_color: "ffffff"
